[package]
name = "agent-bus"
version = "0.2.11"
edition = "2021"
description = "Minimal A2A-shaped MCP message broker for coordinating CLI agent sessions"

[[bin]]
name = "agent-bus"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
inquire = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3        # max optimization (release default; was pinned to 2)
lto = true          # link-time optimization across crates
codegen-units = 1   # whole-program optimization, no parallel-codegen penalty
strip = true        # drop debug symbols — smaller binary
